[gd_scene load_steps=28 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=2]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/theme/oq_ui2d_standard.theme" type="Theme" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_Helpers/OQ_VisibilityToggle.tscn" type="PackedScene" id=6]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_ControllerModel_Right.tscn" type="PackedScene" id=8]
[ext_resource path="res://demo_scenes/UIDemoScene.gd" type="Script" id=9]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=10]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_Stick.tscn" type="PackedScene" id=11]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=12]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=13]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_ControllerModel_Left.tscn" type="PackedScene" id=14]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DVRSettings.tscn" type="PackedScene" id=15]
[ext_resource path="res://icon.png" type="Texture" id=16]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLogWindow.tscn" type="PackedScene" id=17]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel_IPD.tscn" type="PackedScene" id=18]
[ext_resource path="res://OQ_Toolkit/OQ_Interactables/OQ_ButtonPressable.tscn" type="PackedScene" id=19]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DKeyboard.tscn" type="PackedScene" id=20]
[ext_resource path="res://demo_scenes/data/Material_Green.material" type="Material" id=21]
[ext_resource path="res://demo_scenes/data/Material_Red.material" type="Material" id=22]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_AreaObjectGrab.tscn" type="PackedScene" id=23]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 16, 16 )

[sub_resource type="OpenSimplexNoise" id=2]
octaves = 6
period = 32.0
persistence = 0.6
lacunarity = 1.88

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.6, 0.792157, 0.0666667, 1 )
albedo_texture = SubResource( 3 )
uv1_scale = Vector3( 4, 4, 1 )

[node name="UITestRoom" type="Spatial"]
script = ExtResource( 9 )

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 7 )]

[node name="Feature_VRSimulator" parent="OQ_ARVROrigin" instance=ExtResource( 2 )]

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 1 )]

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 4 )]

[node name="Feature_ControllerModel_Left" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 14 )]

[node name="OQ_VisibilityToggle" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 6 )]
invisible_on_start = true

[node name="OQ_UI2DCanvas_NumButtons" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle" instance=ExtResource( 10 )]
transform = Transform( 0.796625, 0, 0.604474, 0, 1, 0, -0.604474, 0, 0.796625, -0.0757154, 0.186514, -0.0449487 )
editor_live_update = false
transparent = false

[node name="ReferenceRect" type="ReferenceRect" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons"]
visible = false
margin_right = 256.0
margin_bottom = 256.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_right = 256.0
margin_bottom = 256.0
color = Color( 0.521569, 0.596078, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_right = 40.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 80.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_left = 96.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 80.0
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_left = 176.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 80.0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_left = 16.0
margin_top = 96.0
margin_right = 80.0
margin_bottom = 160.0
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_left = 96.0
margin_top = 96.0
margin_right = 160.0
margin_bottom = 160.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_left = 176.0
margin_top = 96.0
margin_right = 240.0
margin_bottom = 160.0
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_left = 16.0
margin_top = 176.0
margin_right = 80.0
margin_bottom = 240.0
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_left = 96.0
margin_top = 176.0
margin_right = 160.0
margin_bottom = 240.0
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle/OQ_UI2DCanvas_NumButtons/ReferenceRect"]
margin_left = 176.0
margin_top = 176.0
margin_right = 240.0
margin_bottom = 240.0
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feature_AreaObjectGrab" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 23 )]

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 13 )]

[node name="Feature_ControllerModel_Right" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 8 )]

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 12 )]
ui_raycast_visible_button = -1

[node name="Feature_AreaObjectGrab" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 23 )]

[node name="Locomotion_Stick" parent="OQ_ARVROrigin" instance=ExtResource( 11 )]

[node name="OQ_UI2DLogWindow" parent="." instance=ExtResource( 17 )]
transform = Transform( -4, 0, -8.74228e-08, 1.74846e-07, 3.4641, -0.5, 3.02841e-07, -2, -0.866025, 0, 3, 2 )

[node name="TestUI" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.665606, 0, -0.942996, 0, 2, 0, 1.88599, 0, 0.332803, 1.85032, 1.7519, -0.245856 )
editor_live_update = false
transparent = false

[node name="Control" type="ReferenceRect" parent="TestUI"]
visible = false
margin_right = 768.0
margin_bottom = 768.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TestUI/Control"]
margin_left = 16.0
margin_top = 80.0
margin_right = 160.0
margin_bottom = 144.0
text = "Button"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TestUI/Control"]
margin_top = 160.0
margin_right = 512.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="TestUI/Control"]
margin_top = 256.0
margin_right = 352.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tab 1" type="Container" parent="TestUI/Control/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Button" type="Button" parent="TestUI/Control/TabContainer/Tab 1"]
margin_left = 12.0
margin_top = 13.0
margin_right = 109.0
margin_bottom = 52.0
text = "Button"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tab 2" type="Container" parent="TestUI/Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Tab 3" type="Container" parent="TestUI/Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Tab 4" type="Container" parent="TestUI/Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TitleLable" type="Label" parent="TestUI/Control"]
margin_right = 512.0
margin_bottom = 64.0
text = "Test Controls"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="TestUI/Control"]
position = Vector2( 432, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )

[node name="HSlider" type="HSlider" parent="TestUI/Control"]
margin_left = 16.0
margin_top = 192.0
margin_right = 496.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="TestUI/Control"]
margin_left = 176.0
margin_top = 80.0
margin_right = 320.0
margin_bottom = 144.0
color = Color( 0.192157, 0.411765, 0.141176, 1 )

[node name="OQ_UI2DCanvas_MovementOptions" parent="." instance=ExtResource( 10 )]
transform = Transform( -8.74228e-08, 0, 1, 0, 2, 0, -2, 0, -4.37114e-08, -2, 1.5, -0.246 )
editor_live_update = false
transparent = false

[node name="Control" type="ReferenceRect" parent="OQ_UI2DCanvas_MovementOptions"]
visible = false
margin_right = 512.0
margin_bottom = 512.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OQ_UI2DCanvas_MovementOptions/Control"]
margin_left = 140.0
margin_right = 392.0
margin_bottom = 67.0
text = "Movement Options"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="OQ_UI2DCanvas_MovementOptions/Control"]
margin_left = 28.0
margin_top = 224.0
margin_right = 280.0
margin_bottom = 280.0
text = "Rotation Type"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveSpeedLabel" type="Label" parent="OQ_UI2DCanvas_MovementOptions/Control"]
margin_left = 28.0
margin_top = 112.0
margin_right = 280.0
margin_bottom = 168.0
text = "Movement Speed"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateSpeedLabel" type="Label" parent="OQ_UI2DCanvas_MovementOptions/Control"]
margin_left = 28.0
margin_top = 308.0
margin_right = 280.0
margin_bottom = 364.0
text = "Smooth Turn Speed"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickTurnLabel" type="Label" parent="OQ_UI2DCanvas_MovementOptions/Control"]
margin_left = 28.0
margin_top = 392.0
margin_right = 280.0
margin_bottom = 448.0
text = "Click Turn Angle"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveSpeedSpinBox" type="SpinBox" parent="OQ_UI2DCanvas_MovementOptions/Control"]
margin_left = 308.0
margin_top = 112.0
margin_right = 476.0
margin_bottom = 168.0
min_value = 0.1
max_value = 4.0
value = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateSpeedSpinBox" type="SpinBox" parent="OQ_UI2DCanvas_MovementOptions/Control"]
margin_left = 308.0
margin_top = 308.0
margin_right = 476.0
margin_bottom = 364.0
min_value = 5.0
max_value = 180.0
step = 10.0
value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickTurnAngleSpinBox" type="SpinBox" parent="OQ_UI2DCanvas_MovementOptions/Control"]
margin_left = 308.0
margin_top = 392.0
margin_right = 476.0
margin_bottom = 448.0
min_value = 5.0
max_value = 180.0
step = 5.0
value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationOptionButton" type="OptionButton" parent="OQ_UI2DCanvas_MovementOptions/Control"]
margin_left = 308.0
margin_top = 224.0
margin_right = 476.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="InfoLabel" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.95886, 0, 0.201796, 0, 2, 0, -0.403593, 0, 0.979428, -0.867748, 2.03673, -1.23376 )
text = "Info Label"
margin = 16
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false

[node name="OQ_UI2DCanvas_LevelSelector" parent="." instance=ExtResource( 10 )]
transform = Transform( 1.67744, -0.544566, 0.471608, 0, 1.73205, 0.5, -1.08913, -0.838718, 0.726351, -0.915071, 1.17961, -1.52167 )
editor_live_update = false
transparent = false

[node name="ReferenceRect" type="ReferenceRect" parent="OQ_UI2DCanvas_LevelSelector"]
margin_right = 544.0
margin_bottom = 192.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectTitleLabel" type="Label" parent="OQ_UI2DCanvas_LevelSelector/ReferenceRect"]
margin_right = 544.0
margin_bottom = 48.0
text = "Demo Room Selector"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPhysics" type="Button" parent="OQ_UI2DCanvas_LevelSelector/ReferenceRect"]
margin_left = 16.0
margin_top = 64.0
margin_right = 160.0
margin_bottom = 112.0
text = "Physics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandTracking" type="Button" parent="OQ_UI2DCanvas_LevelSelector/ReferenceRect"]
margin_left = 16.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 176.0
text = "HandTracking"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCollision" type="Button" parent="OQ_UI2DCanvas_LevelSelector/ReferenceRect"]
margin_left = 272.0
margin_top = 128.0
margin_right = 528.0
margin_bottom = 176.0
text = "PlayerCollision"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClimbing" type="Button" parent="OQ_UI2DCanvas_LevelSelector/ReferenceRect"]
margin_left = 176.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 112.0
text = "Climbing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonWalkInPlace" type="Button" parent="OQ_UI2DCanvas_LevelSelector/ReferenceRect"]
margin_left = 336.0
margin_top = 64.0
margin_right = 528.0
margin_bottom = 112.0
text = "WalkInPlace"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OQ_UI2DLabel_IPD" parent="." instance=ExtResource( 18 )]
transform = Transform( 0.999394, 0, 0.8662, 0, 2, 0, -1.7324, 0, 0.499697, -1.57326, 1.60767, -0.792704 )

[node name="OQ_UI2DVRSettings" parent="." instance=ExtResource( 15 )]
transform = Transform( 2.95446, 0, -0.173579, 0, 3, 0, 0.520738, 0, 0.98482, 0.732496, 1.73966, -1.24014 )

[node name="OQ_ButtonPressable" parent="." instance=ExtResource( 19 )]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, -5.96046e-08, 0, 0, 1, -0.0901041, 1.35395, -0.834221 )
press_distance = 0.02
off_material = ExtResource( 22 )
on_material = ExtResource( 21 )

[node name="OQ_UI2DKeyboard" parent="." instance=ExtResource( 20 )]
transform = Transform( -0.737772, -0.174716, 0.652048, -1.13133e-08, 0.965926, 0.258819, -0.675049, 0.19095, -0.712634, -1.10645, 1.69779, 0.595507 )

[node name="TestTextInputLabel" parent="OQ_UI2DKeyboard" instance=ExtResource( 3 )]
transform = Transform( 1, 1.49012e-08, 0, -2.98023e-08, 1, 0, 1.19209e-07, 8.9407e-08, 1, -0.0543875, 0.421844, 0.0514949 )
text = "Input Log"
margin = 16
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false
[connection signal="value_changed" from="OQ_UI2DCanvas_MovementOptions/Control/MoveSpeedSpinBox" to="." method="_on_MoveSpeedSpinBox_value_changed"]
[connection signal="value_changed" from="OQ_UI2DCanvas_MovementOptions/Control/RotateSpeedSpinBox" to="." method="_on_RotateSpeedSpinBox_value_changed"]
[connection signal="value_changed" from="OQ_UI2DCanvas_MovementOptions/Control/ClickTurnAngleSpinBox" to="." method="_on_ClickTurnAngleSpinBox_value_changed"]
[connection signal="item_selected" from="OQ_UI2DCanvas_MovementOptions/Control/RotationOptionButton" to="." method="_on_RotationOptionButton_item_selected"]
[connection signal="pressed" from="OQ_UI2DCanvas_LevelSelector/ReferenceRect/ButtonPhysics" to="." method="_on_ButtonPhysics_pressed"]
[connection signal="pressed" from="OQ_UI2DCanvas_LevelSelector/ReferenceRect/HandTracking" to="." method="_on_HandTracking_pressed"]
[connection signal="pressed" from="OQ_UI2DCanvas_LevelSelector/ReferenceRect/PlayerCollision" to="." method="_on_PlayerCollision_pressed"]
[connection signal="pressed" from="OQ_UI2DCanvas_LevelSelector/ReferenceRect/ButtonClimbing" to="." method="_on_ButtonClimbing_pressed"]
[connection signal="pressed" from="OQ_UI2DCanvas_LevelSelector/ReferenceRect/ButtonWalkInPlace" to="." method="_on_ButtonWalkInPlace_pressed"]
